<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CityWeather">

    <TextView
        android:id="@+id/textview_savedcity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_savedcity" />

    <TextView
        android:id="@+id/textview_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_headline" />

    <TextView
        android:id="@+id/textview_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_date" />

    <TextView
        android:id="@+id/textview_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="11dp"
        android:text="@string/condition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_temp" />

    <TextView
        android:id="@+id/textview_daytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="2dp"
        android:text="@string/day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_condition" />

    <TextView
        android:id="@+id/textview_nighttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:text="@string/night"
        app:layout_constraintStart_toEndOf="@+id/textview_daytext"
        app:layout_constraintTop_toTopOf="@+id/textview_daytext" />

    <ImageView
        android:id="@+id/imageview_day"
        android:layout_width="71dp"
        android:layout_height="73dp"
        android:layout_marginStart="41dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_daytext"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <ImageView
        android:id="@+id/imageview_night"
        android:layout_width="71dp"
        android:layout_height="73dp"
        android:layout_marginStart="71dp"
        app:layout_constraintStart_toEndOf="@+id/imageview_day"
        app:layout_constraintTop_toBottomOf="@+id/textview_nighttext"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/textview_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/imageview_day"
        app:layout_constraintStart_toStartOf="@+id/imageview_day"
        app:layout_constraintTop_toBottomOf="@+id/imageview_day" />

    <TextView
        android:id="@+id/textview_night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/imageview_night"
        app:layout_constraintStart_toStartOf="@+id/imageview_night"
        app:layout_constraintTop_toBottomOf="@+id/imageview_night" />

    <TextView
        android:id="@+id/textview_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/MoreDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_day" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/Save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_link" />

    <Button
        android:id="@+id/button_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/Current"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_link" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="296dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_save" />

    <ImageView
        android:id="@+id/imageview_cityprogress"
        android:layout_width="261dp"
        android:layout_height="176dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plain_image" />

    <ProgressBar
        android:id="@+id/progressBarCity"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="@+id/imageview_cityprogress"
        app:layout_constraintStart_toStartOf="@+id/imageview_cityprogress"
        app:layout_constraintTop_toTopOf="@+id/imageview_cityprogress" />

</androidx.constraintlayout.widget.ConstraintLayout>